--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     name: 'CSnAI Notes',
     repo: 'https://github.com/owencalstroy/CSnAI-notes',
     loadSidebar: true,
-    sidebar: 'auto',
+    //sidebar: 'auto',
     loadNavbar: true,
     subMaxLevel: 3,
     coverpage: true,  // 启用封面页
