--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
     darkMode: {
         default: false,
         toggleEl: '#dark-mode-toggle'
+    },
+    coverpage: {
+      image: '/assets/images/wallpaper.png',  // 指定封面图片路径
+      width: 300,  // 可选：设置图片宽度
+      height: 200, // 可选：设置图片高度
     }
     };
 
